--- a/package.json
+++ b/package.json
@@ -5,34 +5,42 @@
   "main": "dist/index.js",
   "scripts": {
     "lint": "eslint src/**/*.ts",
-    "format": "eslint src/**/*.ts --fix",
+    "lint:fix": "eslint src/**/*.ts --fix",
     "build": "tsc",
-    "start": "nodemon src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon -r dotenv/config src/index.ts",
+    "test": "mocha -r dotenv/config -r ts-node/register 'src/test/**/*.ts' --timeout 10000"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^5.15.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "multer": "^1.4.3",
     "pg": "^8.7.1",
-    "sharp": "^0.29.1"
+    "sharp": "^0.29.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.22",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/mocha": "^9.0.0",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.1",
     "@types/pg": "^8.6.1",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2",
+    "mocha": "^9.1.3",
     "nodemon": "^2.0.14",
     "prettier": "^2.4.1",
     "ts-node": "^10.3.0",
