--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^5.15.3",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "multer": "^1.4.3",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "sharp": "^0.29.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.2.22",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
@@ -31,6 +36,9 @@
     "@types/mocha": "^9.0.0",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.1",
+    "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@types/pg": "^8.6.1",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
